--- a/src/pug/modals/project-modal.pug
+++ b/src/pug/modals/project-modal.pug
@@ -5,3 +5,6 @@ block variables
   - modalClasses = "project-modal"
 
 block modalContent
+  .tablet-image
+    img(src=`./assets/images/mac-bg.png` alt= "banner.png" width="1140" height="720")   
+    .tablet-screen
