--- a/src/pug/modals/mobile-project-modal.pug
+++ b/src/pug/modals/mobile-project-modal.pug
@@ -5,3 +5,6 @@ block variables
   - modalClasses = "mobile-project-modal"
 
 block modalContent
+   .mobile-image
+      img(src=`./assets/images/mobile-bg.png` alt= "banner.png" width="1140" height="720")   
+      .mobile-screen
