--- a/src/pug/sections/index-page/questions.pug
+++ b/src/pug/sections/index-page/questions.pug
@@ -9,7 +9,9 @@ block content
   include ../../content/question-list
   include ../../components/accordeons/main-accordeon/main-accordeon
 
-  +main-accordeon(questionList)
+  .questions-wrapper
+    +main-accordeon(questionList)
+    img(src='./assets/images/fag_img.png' alt="fag_img" width="620" height="360")
 
   +main-btn({
     class: 'main-btn--outlined base-section__btn',
