--- a/src/pug/components/header/header.pug
+++ b/src/pug/components/header/header.pug
@@ -40,22 +40,16 @@ header.header
             text: 'О компании'
           },
           {
-            href: 'services-main.html',
-            text: 'Услуги',
-            inner: [
-              {
-                href: '#',
-                text: 'Услуга 1',
-              },
-              {
-                href: '#',
-                text: 'Услуга 2',
-              },
-              {
-                href: '#',
-                text: 'Услуга 3',
-              },
-            ]
+            href: 'services-detail.html',
+            text: 'Разработка сайтов'
+          },
+          {
+            href: 'services-detail.html',
+            text: 'WEB-дизайн'
+          },
+          {
+            href: 'services-detail.html',
+            text: 'Продвижение сайтов'
           },
           {
             href: 'faq.html',
