--- a/src/pug/components/company/contacts/company-worktime.pug
+++ b/src/pug/components/company/contacts/company-worktime.pug
@@ -1,1 +1,1 @@
-span.company-worktime г. Санкт-Петербург <b>Пн - Пт : 10:00 - 19:00</b>
+span.company-worktime.company-worktime--alt г. Санкт-Петербург <b>Пн - Пт : 10:00 - 19:00</b>
