--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -126,9 +126,9 @@ table {
   max-width: 600px;
   padding: clamp(20px, 4vw, 40px) 0;
 
-  .main-btn {
-    flex-grow: 1;
-  }
+  // .main-btn {
+  //   flex-grow: 1;
+  // }
 }
 
 .base-title-block {
