Доработка хедера, блока с вопросами, модалки детального просмотра проекта

--- a/src/pug/components/header/_header.scss
+++ b/src/pug/components/header/_header.scss
@@ -39,7 +39,19 @@
     }
 
     .company-worktime {
+      display: none;
       margin-right: auto;
+
+      @include media-down(1200px) {
+        display: flex;
+      }
+    }
+    .main-logo {
+      margin-right: auto;
+
+      @include media-down(1200px) {
+        display: none;
+      }
     }
   }
 
@@ -53,7 +65,12 @@
     }
 
     .main-logo {
+      display: none;
       margin-right: auto;
+
+      @include media-down(1200px) {
+        display: flex;
+      }
     }
   }
 
