--- a/src/pug/components/header/header.pug
+++ b/src/pug/components/header/header.pug
@@ -8,6 +8,7 @@ header.header
   .header__top
     .container
       include ../company/contacts/company-worktime
+      +main-logo(true)
 
       +social({
         list: [
@@ -51,7 +52,7 @@ header.header
           },
           {
             href: 'services-detail.html',
-            text: 'Разработка сайтов'
+            text: 'Разработка'
           },
           {
             href: 'services-detail.html',
@@ -59,7 +60,7 @@ header.header
           },
           {
             href: 'services-detail.html',
-            text: 'Продвижение сайтов'
+            text: 'Продвижение'
           },
           {
             href: 'faq.html',
