--- a/src/pug/sections/portfolio/portfolio-redesign/portfolio-single.scss
+++ b/src/pug/sections/portfolio/portfolio-redesign/portfolio-single.scss
@@ -108,10 +108,10 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          max-width: 670px;
-          max-height: 440px;
-          top: 60px;
-          left: 117px;
+          max-width: 680px;
+          max-height: 450px;
+          top: 50px;
+          left: 112px;
           background-color: rgba(0, 0, 0, 0.5);
           z-index: 2;
 
@@ -173,10 +173,10 @@
         &::before {
           content: '';
           position: absolute;
-          top: 32px;
+          top: 18px;
           left: 21px;
           width: 240px;
-          height: 484px;
+          height: 516px;
           background-color: rgba(0, 0, 0, 0.7);
           z-index: 2;
           border-radius: 30px;
@@ -220,6 +220,10 @@
     text-align: center;
     border: none;
     background-color: transparent;
+
+    span {
+      white-space: normal;
+    }
 
     &:hover {
       scale: 1.1;
