--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -141,3 +141,9 @@ table {
     margin: 0;
   }
 }
+.lw-separator {
+  max-width: 330px;
+  max-height: 24px;
+  display: block;
+  margin: 0 auto;
+}
