--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,13 +10,20 @@ block variables
 
 block content
   include ./sections/index-page/hero
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/about
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/features
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   
   include ./sections/index-page/workflow
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/questions
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/reviews
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/portfolio
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/offer
 
 block modals
