--- a/src/styles/base/_containers.scss
+++ b/src/styles/base/_containers.scss
@@ -11,3 +11,10 @@
   padding: 0 var(--container-fuild-offset);
   max-width: var(--container-fluid-width);
 }
+
+.lw-seperator {
+  max-width: 330px;
+  max-height: 24px;
+  display: block;
+  margin: 0 auto;
+}
