--- a/src/pug/components/header/header.pug
+++ b/src/pug/components/header/header.pug
@@ -52,7 +52,15 @@ header.header
           },
           {
             href: 'services-detail.html',
-            text: 'Разработка'
+            text: 'Разработка',
+            inner: [
+            {  href: 'services-detail-item.html',
+              text: 'Сайт визитка', },
+            {  href: 'services-detail-item.html',
+              text: 'Лендинг', },
+            {  href: 'services-detail-item.html',
+              text: 'Корпоративный сайт', }
+            ]
           },
           {
             href: 'services-detail.html',
