--- a/src/pug/content/about-slider-list.pug
+++ b/src/pug/content/about-slider-list.pug
@@ -1,5 +1,5 @@
 -
-  const aboutList = [
+  const aboutSliderList = [
     {
       title: 'Сайт-визитка',
       text: 'Небольшой сайт, являющийся Вашей визитной карточкой в сети интернет. Немного информации, фотогалерея, контакты и форма обратной связи.',
