--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,8 +13,13 @@ block content
   img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/about
   img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
+  include ./sections/index-page/about-slider
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
+  include ./sections/index-page/team-slider
+  img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
   include ./sections/index-page/features
   img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
+
   
   include ./sections/index-page/workflow
   img(src=`./assets/images/separator.svg` alt= "separator.svg" width="330" height="24").lw-separator 
