--- a/src/pug/sections/portfolio/portfolio-redesign/portfolio-single.scss
+++ b/src/pug/sections/portfolio/portfolio-redesign/portfolio-single.scss
@@ -59,7 +59,7 @@
 
     @include media-down($desktop-width) {
       grid-template-columns: 1fr;
-      gap: var(--gap-m);
+      gap: var(--gap-xxl);
     }
 
     &-item:first-child {
