--- a/src/pug/components/cards/info-card/_info-card.scss
+++ b/src/pug/components/cards/info-card/_info-card.scss
@@ -28,8 +28,8 @@ $border-radius: 10px;
   svg {
     fill: var(--primary);
     height: 100%;
-    // width: 100%;
-    // max-width: 90px;
+    width: 100%;
+    max-width: 50px;
     max-height: 50px;
     aspect-ratio: 1 / 1;
   }
@@ -48,7 +48,7 @@ $border-radius: 10px;
 
   &-text {
     font-family: var(--secondary-font);
-    font-size: 16px;
+    font-size: 14px;
     font-weight: var(--fw-l);
     margin-bottom: auto;
 
