--- a/src/pug/components/nav/_nav.scss
+++ b/src/pug/components/nav/_nav.scss
@@ -117,7 +117,8 @@ $mobile-view-width: 1200px;
       width: 100%;
       height: 100%;
       min-height: 100dvh;
-      background-color: rgb(0 0 0 / 90%);
+      backdrop-filter: blur(6px);
+      // background-color: rgb(0 0 0 / 90%);
       z-index: 10;
       animation: fade-in 0.2s linear;
 
@@ -147,7 +148,7 @@ $mobile-view-width: 1200px;
       right: 0;
       display: flex;
       flex-direction: column;
-      width: 100%;
+      width: 50%;
       // width: 90dvw;
       // height: fit-content;
       height: 100%;
@@ -156,20 +157,36 @@ $mobile-view-width: 1200px;
       background-color: var(--dark);
       overflow-y: auto;
       padding: var(--gap-s) clamp(24px, 5vw, 40px) clamp(24px, 5vw, 40px);
+
+      @include media-down($tablet-width) {
+        width: 70%;
+      }
+      @include media-down($mobile-width) {
+        width: 100%;
+      }
     }
 
     &__list {
       flex-flow: column nowrap;
-      align-items: center;
+      // align-items: center;
       height: fit-content;
       width: 100%;
       // margin: auto 0;
       padding: clamp(24px, 5vw, 40px) 0;
 
+      &-item ul {
+        padding-left: 50px;
+
+        @include media-down($tablet-width) {
+          padding-left: 30px;
+        }
+      }
+
       &-item a {
         position: relative;
         font-size: 16px;
-        text-align: center;
+        justify-content: flex-start;
+        // text-align: center;
         // justify-content: flex-start;
         // padding-left: 1.4em;
 
