--- a/src/pug/components/sliders/about-slider/about-slider.pug
+++ b/src/pug/components/sliders/about-slider/about-slider.pug
@@ -1,16 +1,10 @@
-include ../../cards/review-card/review-card
-include ../../cards/portfolio-card/portfolio-card
 include ../../cards/info-card/info-card
 
-mixin main-slider(data)
-  .swiper.main-slider(class= data.cls ? data.cls : null)
+mixin about-slider(data)
+  .swiper.about-slider(class= data.cls ? data.cls : null)
     .swiper-wrapper
       each slide in data.slides
         .swiper-slide
-          if data.type === 'review'
-            +review-card(slide)
-          if data.type === 'portfolio'
-            +portfolio-card(slide)
           if data.type === 'about'
             +info-card(slide)
 
