--- a/src/pug/sections/contacts/_contacts.scss
+++ b/src/pug/sections/contacts/_contacts.scss
@@ -1,10 +1,23 @@
 .contacts {
+  padding: clamp(50px, 6vw, 70px) 0;
+
+  .container {
+    display: grid;
+    grid-template-columns: 6fr 3fr;
+    gap: clamp(30px, 3vw, 50px);
+
+    @include media-down(1100px) {
+      grid-template-columns: 1fr;
+    }
+  }
+
   &__main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: clamp(30px, 3vw, 50px);
+    column-gap: clamp(30px, 3vw, 50px);
+    row-gap: 20px;
     max-width: 800px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 
     @include media-down($tablet-width) {
       grid-template-columns: 1fr;
@@ -19,10 +32,30 @@
     svg {
       fill: var(--primary);
     }
+
+    &-content {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+
+      & span:first-child {
+        font-weight: 300;
+        font-size: 16px;
+        letter-spacing: 1.6px;
+        color: var(--secondary);
+        text-transform: capitalize;
+      }
+    }
   }
 
   &__social {
-    @extend %flex-wrap;
+    @extend %flex-column;
     gap: 10px;
+    margin-bottom: clamp(20px, 3vw, 40px);
+
+    &-content {
+      @extend %flex-wrap;
+      gap: 10px;
+    }
   }
 }
