--- a/src/pug/components/cards/info-card/_info-card.scss
+++ b/src/pug/components/cards/info-card/_info-card.scss
@@ -43,7 +43,7 @@ $border-radius: 10px;
 
   &-title {
     font-family: var(--primary-font);
-    font-size: var(--base-cart-title-fs);
+    font-size: clamp(16px, 1.8vw, 18px);
   }
 
   &-text {
