--- a/src/pug/sections/contacts/contacts.pug
+++ b/src/pug/sections/contacts/contacts.pug
@@ -1,8 +1,9 @@
+
 include ../../components/main-btn/main-btn
 include ../../components/forms/service-detail-form/service-detail-form
 
 block content
- .contacts
+ section.page-top-section.contacts
   .container
     .contacts__side
       .base-title-block
