--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -20,6 +20,7 @@
 @import '../pug/layouts/content-block';
 
 // components
+@import '../pug/components/breadcrumbs/breadcrumbs';
 @import '../pug/components/loaders/loader';
 @import '../pug/modals/modal';
 @import '../pug/components/header/header';
